src/components/rightside.css
.right-side {
  margin-top: 4.5rem;
}
.grid-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 10px;
}

.grid-item {
  border: 1px solid transparent !important;
  text-align: center;
  border-radius: 20px;
  padding: 1rem;
  position: relative;
  width: 100%;
}

/* make the second grid item twice as tall as the others */
.grid-item:nth-child(2) {
  width: 100%;
  height: 300px;
  grid-row: span 2;
  position: relative;
  z-index: 0;
  top: 80px;
  left: 100px;
  background: rgb(255, 255, 255);
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(155, 143, 135, 1) 100%
  );
}
.grid-item:nth-child(2)::before {
  content: "";
  position: absolute;
  top: -80px;
  left: -100px;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  z-index: -4;
  background-image: url("../assets/images/person-happy.png");
  background-size: cover;
  background-repeat: no-repeat;
  transform: scale(1.2);
  background-position: center;
  /* background-position-x: 45%; */
  transition: all 0.5s ease-in-out;
  overflow: hidden;
}

.grid-item:nth-child(2)::after {
  content: "";
  position: absolute;
  top: -80px;
  left: -120px;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  z-index: -32222;
  background-image: url("../assets/images/happy-background.png");
  background-size: cover;
  background-repeat: no-repeat;
  transform: scale(1.2);
  background-position-x: 50%;
  transition: all 0.5s ease-in-out;
  /* filter: blur(10px); */
}

.take-expenses {
  text-align: left;
  font-size: small;
  line-height: 1rem;
  display: flex;
  align-items: flex-end;
  height: 60%;
}

.followers p {
  display: flex;
  justify-content: flex-end;
  text-align: center;
  width: 100%;
  font-size: small;
}

.grid-item:nth-child(3) {
  background: transparent;
}
.style-line-rotate {
  transform: rotate(270deg);
  margin-top: 1rem;
  margin-left: 1rem;
  font-size: xx-small;
}

.grid-item:nth-child(1) {
  background-color: #9e938b;
  place-self: center;
  width: 80%;
  height: 130%;
  z-index: 1000;
  position: relative;
  padding-bottom: 1rem;
}

.grid-item:nth-child(1)::after {
  content: "";
  position: absolute;
  height: 72%;
  width: 60%;
  left: 0;
  top: 10.3rem;
  border: 2px solid black;
  border-left: none;
  border-bottom: none;
  border-top-left-radius: 0px;
  border-top-right-radius: 20px;
}

.grid-item:nth-child(1)::before {
  content: "";
  position: absolute;
  height: 64%;
  width: 60%;
  left: 5.8rem;
  top: 18.8rem;
  border: 2px solid black;
  border-bottom-left-radius: 20px;
  border-top: transparent;
  border-right: transparent;
}

.bottom-container {
  height: 100px;
  margin-top: 10rem;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  place-content: center;
  place-items: center;
  /* put border image on top part only */
  border-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0.11),
      rgba(253, 253, 253, 0)
    )
    1;
  border-image-slice: 1;
  border-style: solid;
  border-width: 2px 0 0px 0px;
  border-radius: 20px;
  position: relative;
}

.sub-text {
  width: 25ch;
  font-size: small;
  color: #928f8e;
}

.style-line-rotate-up {
  transform: rotate(90deg);
  position: absolute;
  top: -2.1rem;
  right: 15.25rem;
  z-index: -1;
}

.main-arrow-rotate {
  position: absolute;
  bottom: 6rem;
  left: -12.6rem;
  transform: rotate(90deg);
  border: 1px solid black;
  border-radius: 50%;
  padding: 0.4rem;
  background-color: white;
  transition: all 0.5s ease-in-out;
}

.main-arrow-rotate * {
  font-size: 10px;
  display: flex;
}

.final-curve {
  position: absolute;
  bottom: 0;
  left: 8.5rem;
  width: 30%;
  height: 80%;
  border: 2px solid black;
  z-index: -1;
  bottom: 6.3rem;
  border-top-right-radius: 20px;
  border-left: transparent;
  border-bottom: transparent;
}

.big-arrow {
  position: relative;
  transition: all 0.5s ease-in-out;
  z-index: 20000;
}
.big-arrow-icon {
  position: absolute;
  top: -1.9rem;
  left: 9rem;
  font-size: 40px;
  background-color: #f25019;
  z-index: 10001;
  padding: 1.3rem;
  border-radius: 100%;
  display: flex;
  transform: rotate(30deg);
}
.dots {
  position: relative;
}
.image-pattern {
  width: 80%;
  height: 100%;
  object-fit: contain;
  position: relative;
  left: -0.8rem;
  top: 0.5rem;
}
.title-icon {
  display: flex;
  gap: 1rem;
}

.right-side:hover .grid-item:nth-child(2)::before {
  transform: scale(1.3) translateY(5px);
  transition: all 0.5s ease-in-out;
}

.right-side:hover .grid-item:nth-child(2)::after {
  transform: scale(1) scaleY(1.3) translateY(0) skewY(5deg);
  transition: all 0.5s ease-in-out;
  /* filter: blur(10px); */
}

.right-side:hover .big-arrow {
  transform: rotate(30deg);
  z-index: 20000;
  animation: bounce-squish 1s linear infinite;
  animation-delay: 5s;
  transition: all 0.5s ease-in-out;
}

.right-side:hover .grid-item .main-arrow-rotate {
  transform: rotate(270deg);
  transition: all 0.5s ease-in-out;
}

/* Rotating animation */
@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* bounce animation */
@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes bounce-squish {
  0% {
    transform: translateY(0) scale(1);
  }
  50% {
    transform: translateY(-10px) scale(0.9);
  }
  100% {
    transform: translateY(0) scale(1);
  }
}

